--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
     <main>
         <div class="cards-container">
-            <div class="card" onclick="location.href='#sinais-vitais'">
-                <i class="fas fa-heartbeat"></i>
-                <h3>Sinais Vitais</h3>
-            </div>
+            <div class="card" onclick="location.href='sinais-vitais.html'">
+    <i class="fas fa-heartbeat"></i>
+    <h3>Sinais Vitais</h3>
+</div>
             <div class="card" onclick="location.href='#indices'">
                 <i class="fas fa-calculator"></i>
                 <h3>Índices e Cálculos</h3>
