--- a/sinais-vitais.html
+++ b/sinais-vitais.html
@@ -44,6 +44,25 @@
                     <h3>Parâmetros de Normalidade</h3>
                     <div class="parametro-item">
                         <h4>Frequência Respiratória</h4>
+                        <p>12 a 20 rpm</p>
+                    </div>
+                    <div class="parametro-item">
+                        <h4>Saturação Arterial de O2</h4>
+                        <p>90 a 100%</p>
+                    </div>
+                    <div class="parametro-item">
+                        <h4>Frequência Cardíaca</h4>
+                        <p>80 a 100 bpm</p>
+                    </div>
+                    <div class="parametro-item">
+                        <h4>Pressão Arterial</h4>
+                        <p>120/80 mmHg até 130/85 mmHg</p>
+                    </div>
+                </div>
+                <div id="suporte-content" class="parametro-content">
+                    <h3>Com indicação para suporte ventilatório (VM, VNI)</h3>
+                    <div class="parametro-item">
+                        <h4>Frequência Respiratória</h4>
                         <p>> 35 rpm</p>
                     </div>
                     <div class="parametro-item">
@@ -58,9 +77,6 @@
                         <h4>Pressão Arterial Sistólica</h4>
                         <p>> 180 mmHg ou < 90 mmHg</p>
                     </div>
-                </div>
-                <div id="suporte-content" class="parametro-content">
-                    <!-- Conteúdo para suporte ventilatório será adicionado aqui -->
                 </div>
             </div>
         </div>
