--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
             <i class="fas fa-bars"></i>
         </div>
         <h1>Portal da Fisioterapia</h1>
-        <nav>
-            <ul>
-                <li><a href="#sinais-vitais"><i class="fas fa-heartbeat"></i> Sinais Vitais</a></li>
-                <li><a href="#indices"><i class="fas fa-calculator"></i> Índices e Cálculos</a></li>
-                <li><a href="#exames"><i class="fas fa-flask"></i> Exames Laboratoriais</a></li>
-                <li><a href="#escalas"><i class="fas fa-chart-line"></i> Escalas Funcionais</a></li>
-                <li><a href="#vni"><i class="fas fa-lungs"></i> VNI</a></li>
-                <li><a href="#vm"><i class="fas fa-wind"></i> VM</a></li>
-                <li><a href="#desmame"><i class="fas fa-door-open"></i> Desmame</a></li>
-            </ul>
-        </nav>
+       <nav>
+    <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+        <li><a href="sinais-vitais.html"><i class="fas fa-heartbeat"></i> Sinais Vitais</a></li>
+        <li><a href="indices-calculos.html"><i class="fas fa-calculator"></i> Índices e Cálculos</a></li>
+        <li><a href="#exames"><i class="fas fa-flask"></i> Exames Laboratoriais</a></li>
+        <li><a href="#escalas"><i class="fas fa-chart-line"></i> Escalas Funcionais</a></li>
+        <li><a href="#vni"><i class="fas fa-lungs"></i> VNI</a></li>
+        <li><a href="#vm"><i class="fas fa-wind"></i> VM</a></li>
+        <li><a href="#desmame"><i class="fas fa-door-open"></i> Desmame</a></li>
+    </ul>
+</nav>
     </header>
 
     <main>
@@ -46,10 +47,10 @@
                 <i class="fas fa-heartbeat"></i>
                 <h3>Sinais Vitais</h3>
             </div>
-            <div class="card" onclick="location.href='#indices'">
-                <i class="fas fa-calculator"></i>
-                <h3>Índices e Cálculos</h3>
-            </div>
+            <div class="card" onclick="location.href='indices-calculos.html'">
+    <i class="fas fa-calculator"></i>
+    <h3>Índices e Cálculos</h3>
+</div>
             <div class="card" onclick="location.href='#exames'">
                 <i class="fas fa-flask"></i>
                 <h3>Exames Laboratoriais</h3>
