--- a/sinais-vitais.html
+++ b/sinais-vitais.html
@@ -15,17 +15,17 @@
         </div>
         <h1>Portal da Fisioterapia</h1>
         <nav>
-            <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
-                <li><a href="#sinais-vitais" class="active"><i class="fas fa-heartbeat"></i> Sinais Vitais</a></li>
-                <li><a href="#indices"><i class="fas fa-calculator"></i> Índices e Cálculos</a></li>
-                <li><a href="#exames"><i class="fas fa-flask"></i> Exames Laboratoriais</a></li>
-                <li><a href="#escalas"><i class="fas fa-chart-line"></i> Escalas Funcionais</a></li>
-                <li><a href="#vni"><i class="fas fa-lungs"></i> VNI</a></li>
-                <li><a href="#vm"><i class="fas fa-wind"></i> VM</a></li>
-                <li><a href="#desmame"><i class="fas fa-door-open"></i> Desmame</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+        <li><a href="sinais-vitais.html" class="active"><i class="fas fa-heartbeat"></i> Sinais Vitais</a></li>
+        <li><a href="indices-calculos.html"><i class="fas fa-calculator"></i> Índices e Cálculos</a></li>
+        <li><a href="#exames"><i class="fas fa-flask"></i> Exames Laboratoriais</a></li>
+        <li><a href="#escalas"><i class="fas fa-chart-line"></i> Escalas Funcionais</a></li>
+        <li><a href="#vni"><i class="fas fa-lungs"></i> VNI</a></li>
+        <li><a href="#vm"><i class="fas fa-wind"></i> VM</a></li>
+        <li><a href="#desmame"><i class="fas fa-door-open"></i> Desmame</a></li>
+    </ul>
+</nav>
     </header>
 
     <main>
